     - jump to next keyframe (same as before, but in the opposite direction)
     - delete current keyframe (affects all motion curves which contain a corresponding keyframe)
     - duplicate current keyframe (affects all motion curves which contain a corresponding keyframe)
     - reset all motion curves/remove all keyframes
 - direct mp4-output in the main-editor and Easy-Movie-Maker, so you can render small animations very quickly and without
   involving any other software
     - new option "tina.keep_temp_mp4_frames" in the Preferences to specify if you want to keep the individual frames (and must delete them manually)
 - easy revert-to-default-feature for most parameters: just double-click at the label in front of an field to revert the
   current-value to the default value. To see if a field supprots this feature, just hover with the mouse of the label.
   When the cursor turn into a hand-symbol, the field supports the feature. This function also respects motion-curves and can be undone.
 - new "RunRandomScript"-random-flame-generator which executes randomly selected scripts from your script-library to generate random flames.
   This makes the scripting-feature more visible to users who not already know much about it, and also creates a lot of beautiful new flames.
   The random generator also adds symmetry and weight-fields, accordingly to your selection, on top of the script-generated flames,
   but preserves the script-generated-colors (when any).
   You can use the options tinaRandGenRunRandomScriptIncludedScripts and tinaRandGenRunRandomScriptExcludedScripts in the Preferences to
   include or exclude specific scripts (or both).
 - moved the old webspace to a secured site:
     - https://jwildfire.overwhale.com is the JWildfire site
     - https://jwildfire-forum.overwhale.com is the JWildfire-forum
     - (https://mb3d.overwhale.com is the Mandelbulb3D site)
     - (https://flamelet.overwhale.com is the Flamelet site)